Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 10.1.13
-
Component/s: Admin statements, Prepared Statements
-
Labels:None
-
Sprint:10.1.13
Description
It's not possible to use CREATE/DROP ROLE in prepared statements. Example:
MariaDB [(none)]> SET @createRole = 'CREATE ROLE developers';
|
Query OK, 0 rows affected (0.00 sec)
|
MariaDB [(none)]> PREPARE stmtCreateRole FROM @createRole;
|
ERROR 1295 (HY000): This command is not supported in the prepared statement protocol yet
|
Attachments
Issue Links
- is part of
-
MDEV-5522 Make CREATE/DROP/SET ROLE usable in stored programs
-
- Open
-