MDEV-9443: Roles aren't supported in prepared statements

Make role statements work with the PREPARE keyword.